# rusticle_sim

./: .gitignore  Cargo.toml  README.md  TODO.md
saved/: colortable.json  particlesettings.json
saved/palletes/: Bands.json  Chains.json  CompetetiveWorms.json  Lava.json  RGBTrains.json  Rainbow.json  Waves.json  Worms.json
saved/particles/: massive.json  uniform.json
src/: camera.rs  color_table.rs  controller.rs  game.rs  gui.rs  main.rs  particle.rs  particle_settings.rs  renderer.rs  saver.rs  shader.wgsl  texture.rs  world.rs  world_settings.rs
