[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
nalgebra-glm = "0.3"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
rand = "0.8.5"
rayon = "1.5"